--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,6 @@
 
 @layer components {
   .btn {
-    @apply bg-blue-400 px-2 py-1 rounded-sm w-32;
+    @apply bg-blue-400 px-2 py-1 rounded-sm w-32 mx-5;
   }
 }
